manifests/deployments/data-hub/data-hub-metrics-api/data-hub-metrics-api--stg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-hub-metrics-api--stg
  labels:
    app: data-hub-metrics-api--stg
  namespace: data-hub
spec:
  selector:
    matchLabels:
      app: data-hub-metrics-api--stg
  template:
    metadata:
      labels:
        app: data-hub-metrics-api--stg
    spec:
      containers:
      - name: data-hub-metrics-api
        image: ghcr.io/elifesciences/data-hub-metrics-api_unstable:main-9d848aec-20260722.0814 # {"$imagepolicy": "data-hub:data-hub-metrics-api-unstable"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 3
          timeoutSeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 3
          timeoutSeconds: 5
          periodSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            memory: 100Mi
        volumeMounts:
        - name: gcp-credentials-sealed-secret-volume
          mountPath: /root/.gcp
          readOnly: true
      volumes:
      - name: gcp-credentials-sealed-secret-volume
        secret:
          secretName: gcloud
      tolerations:
      - key: workload
        operator: Equal
        value: "services"
        effect: NoSchedule
      nodeSelector:
        data-hub-workload: "services"
---
apiVersion: v1
kind: Service
metadata:
  name: data-hub-metrics-api--stg
  namespace: data-hub
spec:
  selector:
    app: data-hub-metrics-api--stg
  ports:
  - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-hub-metrics-api--stg
  namespace: data-hub
  labels:
    app: data-hub-metrics-api--stg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  rules:
    - host: data-hub-metrics-api--stg.elifesciences.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: data-hub-metrics-api--stg
                port:
                  number: 8000
  tls:
    - hosts:
        - data-hub-metrics-api--stg.elifesciences.org
      secretName: data-hub-metrics-api-stg-tls
